# trading_algos

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: bollinger.md  index.md
notebooks/: efficient_frontier.ipynb  moving_average_crossover.ipynb  simple_ma_crossover.ipynb
notebooks/algorithms/: bollinger_mean_reversion.ipynb  momentum_trading.ipynb  simple_ma_crossover.ipynb
notebooks/backtesting/: survivorship_bias.ipynb
notebooks/data processing/: identifying_outliers.ipynb
notebooks/optimization/: 1_equal_weighted_portfolio.ipynb  2_minimum_variance_portfolio.ipynb  asset_diversification.ipynb  diversification_effect.ipynb  equal_weighted_portfolio.ipynb  time_diversification.ipynb
optimization/notebooks/: equal_weighted_portfolio.ipynb
project2_bollinger/: bollinger_mean_reversion.ipynb
project2_bollinger/reports/: cumprod.csv  trade_log.csv
src/algorithms/: __init__.py  dataset.py  features.py  moving_average_crossover.py  plots.py
src/algorithms/modeling/: predict.py  train.py
src/datasets/: datasets.py
src/optimization/: optimization.py
src/trading_algos/modeling/: train.py
trading_algos/: __init__.py  cleaning.py  dataset.py  datasets.py  moving_average_crossover.py  optimization.py  plots.py  utils.py
