[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "trading_algos"
version = "0.0.1"
description = "A collection of algorithmic trading strategies, backtested and documented in individual notebooks."
authors = [
  { name = "Jamie Welch" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["trading_algos"]
include = ["pyproject.toml", "trading_algos/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["trading_algos"]
force-sort-within-sections = true

